--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,10 +1,9 @@
-aiohttp==3.8.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
-aiosignal==1.3.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
-alabaster==0.7.12 ; python_full_version >= "3.8.1" and python_version < "3.12"
+aiohttp==3.7.4.post0 ; python_full_version >= "3.8.1" and python_version < "3.12"
+alabaster==0.7.13 ; python_full_version >= "3.8.1" and python_version < "3.12"
 appnope==0.1.3 ; python_full_version >= "3.8.1" and python_version < "3.12" and platform_system == "Darwin" or python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "darwin"
 astroid==2.13.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 asttokens==2.2.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
-async-timeout==4.0.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
+async-timeout==3.0.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 attrs==22.2.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 babel==2.11.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 backcall==0.2.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
@@ -14,13 +13,14 @@ captum==0.6.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 certifi==2022.12.7 ; python_full_version >= "3.8.1" and python_version < "3.12"
 cffi==1.15.1 ; python_full_version >= "3.8.1" and python_version < "3.12" and implementation_name == "pypy"
 cfgv==3.3.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
-charset-normalizer==2.1.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
+chardet==4.0.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
+charset-normalizer==3.0.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 click==8.1.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
 colorama==0.4.6 ; python_full_version >= "3.8.1" and python_version < "3.12"
 comm==0.1.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 commonmark==0.9.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
-contourpy==1.0.6 ; python_full_version >= "3.8.1" and python_version < "3.12"
-coverage[toml]==7.0.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
+contourpy==1.0.7 ; python_full_version >= "3.8.1" and python_version < "3.12"
+coverage[toml]==7.0.5 ; python_full_version >= "3.8.1" and python_version < "3.12"
 cycler==0.11.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 darglint==1.8.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 datasets[datasets]==2.8.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
@@ -36,18 +36,17 @@ executing==1.2.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 filelock==3.9.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 flake8==6.0.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 fonttools==4.38.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
-frozenlist==1.3.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
 fsspec[http]==2022.11.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 gitdb==4.0.10 ; python_full_version >= "3.8.1" and python_version < "3.12"
 gitpython==3.1.30 ; python_full_version >= "3.8.1" and python_version < "3.12"
 huggingface-hub==0.11.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
-identify==2.5.12 ; python_full_version >= "3.8.1" and python_version < "3.12"
+identify==2.5.13 ; python_full_version >= "3.8.1" and python_version < "3.12"
 idna==3.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
 imagesize==1.4.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 importlib-metadata==6.0.0 ; python_full_version >= "3.8.1" and python_version < "3.10"
 iniconfig==2.0.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
-ipykernel==6.20.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
-ipykernel[notebook]==6.20.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
+ipykernel==6.20.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
+ipykernel[notebook]==6.20.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 ipython==8.8.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 ipywidgets[notebook]==8.0.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
 isort==5.11.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
@@ -57,15 +56,15 @@ jinja2==3.1.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 joblib==1.2.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 joblib[sklearn]==1.2.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 json-tricks==3.16.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
-jupyter-client==7.4.8 ; python_full_version >= "3.8.1" and python_version < "3.12"
+jupyter-client==7.4.9 ; python_full_version >= "3.8.1" and python_version < "3.12"
 jupyter-core==5.1.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
 jupyterlab-widgets==3.0.5 ; python_full_version >= "3.8.1" and python_version < "3.12"
 kiwisolver==1.4.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
 lazy-object-proxy==1.9.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 markdown==3.4.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
-markupsafe==2.1.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
+markupsafe==2.1.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 matplotlib-inline==0.1.6 ; python_full_version >= "3.8.1" and python_version < "3.12"
-matplotlib==3.6.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
+matplotlib==3.6.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
 mccabe==0.7.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 multidict==6.0.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
 multiprocess==0.70.14 ; python_full_version >= "3.8.1" and python_version < "3.12"
@@ -82,7 +81,7 @@ pandas==1.5.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 parso==0.8.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
 pastel==0.2.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 pathspec==0.10.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
-pbr==5.11.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
+pbr==5.11.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 pexpect==4.8.0 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform != "win32"
 pickleshare==0.7.5 ; python_full_version >= "3.8.1" and python_version < "3.12"
 pillow==9.4.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
@@ -95,7 +94,6 @@ protobuf==3.20.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 psutil==5.9.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
 ptyprocess==0.7.0 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform != "win32"
 pure-eval==0.2.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
-py==1.11.0 ; python_full_version >= "3.8.1" and python_version < "3.12" and implementation_name == "pypy"
 pyarrow==10.0.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 pycodestyle==2.10.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 pycparser==2.21 ; python_full_version >= "3.8.1" and python_version < "3.12" and implementation_name == "pypy"
@@ -104,16 +102,16 @@ pygments==2.14.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 pylint==2.15.10 ; python_full_version >= "3.8.1" and python_version < "3.12"
 pyparsing==3.0.9 ; python_full_version >= "3.8.1" and python_version < "3.12"
 pytest-cov==4.0.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
-pytest==7.2.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
+pytest==7.2.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 python-dateutil==2.8.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
-pytz==2022.7 ; python_full_version >= "3.8.1" and python_version < "3.12"
+pytz==2022.7.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 pyupgrade==2.38.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
 pywin32==305 ; sys_platform == "win32" and platform_python_implementation != "PyPy" and python_full_version >= "3.8.1" and python_version < "3.12"
 pyyaml==6.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
-pyzmq==24.0.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
+pyzmq==25.0.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 recommonmark==0.7.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 regex==2022.10.31 ; python_full_version >= "3.8.1" and python_version < "3.12"
-requests==2.28.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
+requests==2.28.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 responses==0.18.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 rich==10.16.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 ruamel-yaml-clib==0.2.7 ; platform_python_implementation == "CPython" and python_version < "3.11" and python_full_version >= "3.8.1"
@@ -122,8 +120,7 @@ safety==2.3.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
 scikit-learn[sklearn]==1.2.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 scipy==1.10.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 sentencepiece==0.1.97 ; python_full_version >= "3.8.1" and python_version < "3.12"
-setuptools-scm==7.1.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
-setuptools==65.6.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
+setuptools==66.0.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 six==1.16.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 smmap==5.0.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 snowballstemmer==2.2.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
@@ -156,9 +153,9 @@ traitlets==5.8.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 transformers[sentencepiece,tokenizers,torch]==4.25.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 typeguard==2.13.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
 typing-extensions==4.4.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
-urllib3==1.26.13 ; python_full_version >= "3.8.1" and python_version < "3.12"
+urllib3==1.26.14 ; python_full_version >= "3.8.1" and python_version < "3.12"
 virtualenv==20.17.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
-wcwidth==0.2.5 ; python_full_version >= "3.8.1" and python_version < "3.12"
+wcwidth==0.2.6 ; python_full_version >= "3.8.1" and python_version < "3.12"
 wheel==0.38.4 ; python_full_version >= "3.8.1" and python_version < "3.12" and platform_system == "Linux"
 widgetsnbextension==4.0.5 ; python_full_version >= "3.8.1" and python_version < "3.12"
 wrapt==1.14.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
