--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,7 +53,6 @@ protobuf = "^3.20.1"
 captum = "^0.6.0"
 numpy = "^1.21.6"
 torchtyping = "^0.1.4"
-json-tricks = "^3.15.5"
 torch = "^1.13.1"
 scipy = "^1.8.1"
 matplotlib = "^3.5.2"
@@ -83,6 +82,7 @@ sphinx-rtd-theme = "^1.0.0"
 optional = true
 
 [tool.poetry.group.lint.dependencies]
+gitpython = "^3.1.30"
 bandit = "^1.7.4"
 safety = "^2.2.0"
 black = "^22.6.0"
