--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -20,35 +20,18 @@ repos:
 
   - repo: local
     hooks:
-      - id: pyupgrade
-        name: pyupgrade
-        entry: poetry run pyupgrade --py38-plus
-        types: [python]
-        language: system
-
-  - repo: local
-    hooks:
-      - id: isort
-        name: isort
-        entry: poetry run isort --settings-path pyproject.toml
-        types: [python]
-        language: system
-
-  - repo: local
-    hooks:
       - id: black
         name: black
         entry: poetry run black --config pyproject.toml
         types: [python]
         language: system
 
-  - repo: local
+  - repo: https://github.com/charliermarsh/ruff-pre-commit
+    rev: 'v0.0.227'
     hooks:
-      - id: flake8
-        name: flake8
-        entry: poetry run flake8 --config setup.cfg
-        types: [python]
-        language: system
+      - id: ruff
+        # Respect `exclude` and `extend-exclude` settings.
+        args: ["--force-exclude"]
 
   - repo: local
     hooks:
