--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,7 +1,6 @@
 aiohttp==3.7.4.post0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 alabaster==0.7.13 ; python_full_version >= "3.8.1" and python_version < "3.12"
 appnope==0.1.3 ; python_full_version >= "3.8.1" and python_version < "3.12" and platform_system == "Darwin" or python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "darwin"
-astroid==2.13.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 asttokens==2.2.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 async-timeout==3.0.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 attrs==22.2.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
@@ -26,7 +25,7 @@ darglint==1.8.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 datasets[datasets]==2.8.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 debugpy==1.6.5 ; python_full_version >= "3.8.1" and python_version < "3.12"
 decorator==5.1.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
-dill==0.3.6 ; python_version < "3.12" and python_full_version >= "3.8.1"
+dill==0.3.6 ; python_full_version >= "3.8.1" and python_version < "3.12"
 distlib==0.3.6 ; python_full_version >= "3.8.1" and python_version < "3.12"
 docutils==0.17.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 dparse==0.6.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
@@ -34,9 +33,8 @@ entrypoints==0.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
 exceptiongroup==1.1.0 ; python_full_version >= "3.8.1" and python_version < "3.11"
 executing==1.2.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 filelock==3.9.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
-flake8==6.0.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 fonttools==4.38.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
-fsspec[http]==2022.11.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
+fsspec[http]==2023.1.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 gitdb==4.0.10 ; python_full_version >= "3.8.1" and python_version < "3.12"
 gitpython==3.1.30 ; python_full_version >= "3.8.1" and python_version < "3.12"
 huggingface-hub==0.11.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
@@ -49,8 +47,6 @@ ipykernel==6.20.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 ipykernel[notebook]==6.20.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 ipython==8.8.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 ipywidgets[notebook]==8.0.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
-isort==5.11.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
-isort[colors]==5.11.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
 jedi==0.18.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 jinja2==3.1.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 joblib==1.2.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
@@ -59,12 +55,10 @@ jupyter-client==7.4.9 ; python_full_version >= "3.8.1" and python_version < "3.1
 jupyter-core==5.1.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
 jupyterlab-widgets==3.0.5 ; python_full_version >= "3.8.1" and python_version < "3.12"
 kiwisolver==1.4.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
-lazy-object-proxy==1.9.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 markdown==3.4.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 markupsafe==2.1.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 matplotlib-inline==0.1.6 ; python_full_version >= "3.8.1" and python_version < "3.12"
 matplotlib==3.6.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
-mccabe==0.7.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 multidict==6.0.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
 multiprocess==0.70.14 ; python_full_version >= "3.8.1" and python_version < "3.12"
 mypy-extensions==0.4.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
@@ -94,17 +88,13 @@ psutil==5.9.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
 ptyprocess==0.7.0 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform != "win32"
 pure-eval==0.2.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 pyarrow==10.0.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
-pycodestyle==2.10.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 pycparser==2.21 ; python_full_version >= "3.8.1" and python_version < "3.12" and implementation_name == "pypy"
-pyflakes==3.0.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 pygments==2.14.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
-pylint==2.15.10 ; python_full_version >= "3.8.1" and python_version < "3.12"
 pyparsing==3.0.9 ; python_full_version >= "3.8.1" and python_version < "3.12"
 pytest-cov==4.0.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 pytest==7.2.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 python-dateutil==2.8.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 pytz==2022.7.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
-pyupgrade==2.38.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
 pywin32==305 ; sys_platform == "win32" and platform_python_implementation != "PyPy" and python_full_version >= "3.8.1" and python_version < "3.12"
 pyyaml==6.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 pyzmq==25.0.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
@@ -115,6 +105,7 @@ responses==0.18.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 rich==10.16.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 ruamel-yaml-clib==0.2.7 ; platform_python_implementation == "CPython" and python_version < "3.11" and python_full_version >= "3.8.1"
 ruamel-yaml==0.17.21 ; python_full_version >= "3.8.1" and python_version < "3.12"
+ruff==0.0.227 ; python_full_version >= "3.8.1" and python_version < "3.12"
 safety==2.3.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
 scikit-learn[sklearn]==1.2.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 scipy==1.10.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
@@ -139,11 +130,9 @@ sphinxext-opengraph==0.4.2 ; python_full_version >= "3.8.1" and python_version <
 stack-data==0.6.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 stevedore==4.1.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 threadpoolctl==3.1.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
-tokenize-rt==4.2.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 tokenizers==0.13.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 toml==0.10.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 tomli==2.0.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
-tomlkit==0.11.6 ; python_full_version >= "3.8.1" and python_version < "3.12"
 torch==1.13.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 torchtyping==0.1.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
 tornado==6.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
@@ -157,7 +146,6 @@ virtualenv==20.17.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 wcwidth==0.2.6 ; python_full_version >= "3.8.1" and python_version < "3.12"
 wheel==0.38.4 ; python_full_version >= "3.8.1" and python_version < "3.12" and platform_system == "Linux"
 widgetsnbextension==4.0.5 ; python_full_version >= "3.8.1" and python_version < "3.12"
-wrapt==1.14.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 xxhash==3.2.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 yarl==1.8.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 zipp==3.11.0 ; python_full_version >= "3.8.1" and python_version < "3.10"
