--- a/pyproject.toml
+++ b/pyproject.toml
@@ -90,7 +90,7 @@ darglint = "^1.8.1"
 pre-commit = "^2.19.0"
 pytest = "^7.2.0"
 pytest-cov = "^4.0.0"
-ruff  = "^0.0.240"
+ruff  = "^0.0.252"
 
 [tool.poetry.extras]
 sklearn = ["scikit-learn", "joblib"]
@@ -206,7 +206,7 @@ ignore = [
     "B006",
     "PLR2004",
     "PLR0913",
-    "PLR0915"
+    "PLR0915",
 ]
 line-length = 119
 select = [
@@ -232,6 +232,9 @@ src = ["inseq", "tests"]
 [tool.ruff.isort]
 known-first-party = ["inseq"]
 order-by-type = true
+
+[tool.ruff.pylint]
+max-branches = 20
 
 [tool.ruff.pyupgrade]
 keep-runtime-typing = true
