--- a/requirements.txt
+++ b/requirements.txt
@@ -4,10 +4,11 @@ charset-normalizer==3.1.0 ; python_full_version >= "3.8.1" and python_version < 
 colorama==0.4.6 ; python_full_version >= "3.8.1" and python_version < "3.12"
 commonmark==0.9.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 cycler==0.11.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
-filelock==3.9.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
-fonttools==4.39.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
-huggingface-hub==0.12.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
+filelock==3.10.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
+fonttools==4.39.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
+huggingface-hub==0.13.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
 idna==3.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
+importlib-metadata==6.1.0 ; python_full_version >= "3.8.1" and python_version < "3.10"
 kiwisolver==1.4.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
 matplotlib==3.5.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
 numpy==1.24.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
@@ -29,15 +30,16 @@ requests==2.28.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 rich==10.16.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 scipy==1.10.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 sentencepiece==0.1.97 ; python_full_version >= "3.8.1" and python_version < "3.12"
-setuptools==67.5.1 ; python_full_version >= "3.8.1" and python_version < "3.12" and platform_system == "Linux"
+setuptools==67.6.0 ; python_full_version >= "3.8.1" and python_version < "3.12" and platform_system == "Linux"
 six==1.16.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 tokenizers==0.13.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 tomli==2.0.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 torch==1.13.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 torchtyping==0.1.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
 tqdm==4.65.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
-transformers[sentencepiece,tokenizers,torch]==4.26.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
-typeguard==2.13.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
+transformers[sentencepiece,tokenizers,torch]==4.27.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
+typeguard==3.0.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 typing-extensions==4.5.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
-urllib3==1.26.14 ; python_full_version >= "3.8.1" and python_version < "3.12"
-wheel==0.38.4 ; python_full_version >= "3.8.1" and python_version < "3.12" and platform_system == "Linux"
+urllib3==1.26.15 ; python_full_version >= "3.8.1" and python_version < "3.12"
+wheel==0.40.0 ; python_full_version >= "3.8.1" and python_version < "3.12" and platform_system == "Linux"
+zipp==3.15.0 ; python_full_version >= "3.8.1" and python_version < "3.10"
